[project]
name = "hypermodern-python"
version = "0.1.0"
description = ""
authors = [
    {name = "luho",email = "luca.pasquarelli.villa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern-python = "src.hypermodern_python.script:main"
